# cpplox

./: .gitignore  CMakeLists.txt  chunk.cpp  chunk.hpp  clang-format.sh  common.hpp  configure.sh  main.cpp
.github/workflows/: build.yml  format.yml
src/: Error.cpp  Expr.cpp  Parser.cpp  Run.cpp  Scanner.cpp  Token.cpp
src/includes/: AstPrinter.hpp  Error.hpp  Expr.hpp  Parser.hpp  Run.hpp  Scanner.hpp  Token.hpp
tests/: CMakeLists.txt
tests/unit_tests/: test_scanner.cpp  test_token.cpp
